# QDET-App

./: ReadMe.md  requirements.txt
Project/: .gitignore  db.sqlite3
Project/Project/: asgi.py  settings.py  urls.py  wsgi.py
text2props/: pyproject.toml  requirements.txt  setup.py
text2props/text2props/: example_model_1.py  example_model_2.py  example_script_1.py  example_script_2.py  example_script_2_V2.py
text2props/text2props.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
text2props/text2props/scripts/: example_wrongness_majority.py
text2props/text2props/scripts/aied20/: 5_1_model_selection_DT.py  5_1_model_selection_RF.py  5_2_1_store_predicted_latent_traits.py  5_3_ir_ling_read.py  5_3_ling.py
text2props/text2props/tests/evaluation/: test_error_metrics_latent_traits_estimation.py
text2props/text2props/tests/modules/latent_traits_calibration/: test_wrongness_calibrator.py
text2props/text2props/tests/utils/: test_math_utils.py
text2props/text2props/text2props/: constants.py
text2props/text2props/text2props/evaluation/: latent_traits_estimation.py
text2props/text2props/text2props/model/literature_architectures/: _majority_2pm_irt.py  _majority_wrongness.py  _r2de.py
text2props/text2props/text2props/modules/estimators_from_text/: _majority.py
text2props/text2props/text2props/modules/feature_engineering/: utils.py
text2props/text2props/text2props/modules/feature_engineering/components/: _linguistic.py  _word2vec.py
text2props/text2props/text2props/modules/latent_traits_calibration/: _base.py  _irt.py  utils.py
(+186 files in other folders)
