[build-system]
# These are the requirements to actually build your library
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2props"  # This is the name you'll use to pip install it
version = "0.2.0"
description = "Framework for the estimation of questions latent traits from text."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	'gensim',
	'nltk',
	'numpy',
	'pandas',
	'pyirt',
	'scikit-learn',
	'scipy',
	'textstat',
]

[tool.setuptools]
# This tells setuptools to automatically find your python packages/folders
packages = {find = {}}